--- a/src/app/admin/features/channel_setting/_Dialogue/operator/operatorcancelsubreport/operatorcancelsubreport.component.html
+++ b/src/app/admin/features/channel_setting/_Dialogue/operator/operatorcancelsubreport/operatorcancelsubreport.component.html
@@ -21,7 +21,7 @@
                 </mat-form-field>
             </div>
             <div class="col-12 col-md-3 d-flex justify-content-center align-items-center mb-3" style="cursor: pointer;">
-                <div class="icon-container">
+                <div class="icon-container" (click)="getPDF()">
                     <img src="/assets/images/icons/pdf.png" width="40px">
                     <div class="tooltip">Pdf</div>
                 </div>
