--- a/src/app/admin/features/channel_setting/_Dialogue/operator/operatordialogue/operatordialogue.component.html
+++ b/src/app/admin/features/channel_setting/_Dialogue/operator/operatordialogue/operatordialogue.component.html
@@ -95,17 +95,8 @@
                 <span class="formlabel">Filter
                 </span>
             </div>
-            <!-- <div class="col-12 col-md-6">
-                <mat-form-field>
-                    <input matInput [matDatepicker]="dp" [formControl]="date">
-                    <mat-datepicker-toggle matIconSuffix [for]="dp"></mat-datepicker-toggle>
-                    <mat-datepicker #dp startView="multi-year" (monthSelected)="setMonthAndYear($event, dp)"
-                        panelClass="example-month-picker">
-                    </mat-datepicker>
-                </mat-form-field>
-            </div> -->
             <mat-form-field>
-                <input matInput [matDatepicker]="dp" placeholder="Month and Year" [formControl]="date" >
+                <input matInput [matDatepicker]="dp" placeholder="Month and Year" [formControl]="date">
                 <mat-datepicker-toggle matSuffix [for]="dp"></mat-datepicker-toggle>
                 <mat-datepicker #dp startView="multi-year" (yearSelected)="chosenYearHandler($event)"
                     (monthSelected)="chosenMonthHandler($event, dp)" panelClass="example-month-picker">
@@ -135,14 +126,14 @@
             </div>
             <div class="col-12 col-md-2 d-flex justify-content-center align-items-center tooltip-container"
                 style="cursor: pointer;">
-                <div class="icon-container ">
+                <div class="icon-container" (click)="getExcel()">
                     <img src="/assets/images/icons/Excel.png" width="40px">
                     <div class="tooltip">Excel</div>
                 </div>
             </div>
             <div class="col-12 col-md-2 d-flex justify-content-center align-items-center tooltip-container"
                 style="cursor: pointer;">
-                <div class="icon-container">
+                <div class="icon-container" (click)="getPDF()">
                     <img src="/assets/images/icons/pdf.png" width="40px">
                     <div class="tooltip">Pdf</div>
                 </div>
@@ -194,14 +185,14 @@
             </div>
             <div class="col-12 col-md-2 d-flex justify-content-center align-items-center tooltip-container"
                 style="cursor: pointer;">
-                <div class="icon-container ">
+                <div class="icon-container" (click)="getExcel()">
                     <img src="/assets/images/icons/Excel.png" width="40px">
                     <div class="tooltip">Excel</div>
                 </div>
             </div>
             <div class="col-12 col-md-2 d-flex justify-content-center align-items-center tooltip-container"
                 style="cursor: pointer;">
-                <div class="icon-container">
+                <div class="icon-container" (click)="getPDF()">
                     <img src="/assets/images/icons/pdf.png" width="40px">
                     <div class="tooltip">Pdf</div>
                 </div>
@@ -334,6 +325,66 @@
             <i class="fa fa-close close-icon" style="cursor: pointer;" (click)="onNoClick()"></i>
         </div>
         <label class="header">BLOCK SMARTCARD REPORT
+        </label>
+        <div class="mb-3 display justify-content-center align-items-center " style="padding: 1rem;">
+            <div class="input_box col-12 col-md-8">
+                <span class="formlabel">Click You Need Report Format
+                </span>
+            </div>
+            <div class="col-12 col-md-2 d-flex justify-content-center align-items-center tooltip-container"
+                style="cursor: pointer;">
+                <div class="icon-container" (click)="getExcel()">
+                    <img src="/assets/images/icons/Excel.png" width="40px">
+                    <div class="tooltip">Excel</div>
+                </div>
+            </div>
+            <div class="col-12 col-md-2 d-flex justify-content-center align-items-center tooltip-container "
+                style="cursor: pointer;">
+                <div class="icon-container" (click)="getPDF()">
+                    <img src="/assets/images/icons/pdf.png" width="40px">
+                    <div class="tooltip">Pdf</div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div *ngIf="OType=='totalbox'">
+    <div class="card">
+        <div class="Head d-flex justify-content-between align-items-center mb-3" style="padding: 1rem;">
+            <h6>CONFIRMATION FOR REPORT</h6>
+            <i class="fa fa-close close-icon" style="cursor: pointer;" (click)="onNoClick()"></i>
+        </div>
+        <label class="header">TOTAL SMARTCARD REPORT
+        </label>
+        <div class="mb-3 display justify-content-center align-items-center " style="padding: 1rem;">
+            <div class="input_box col-12 col-md-8">
+                <span class="formlabel">Click You Need Report Format
+                </span>
+            </div>
+            <div class="col-12 col-md-2 d-flex justify-content-center align-items-center tooltip-container"
+                style="cursor: pointer;">
+                <div class="icon-container" (click)="getExcel()">
+                    <img src="/assets/images/icons/Excel.png" width="40px">
+                    <div class="tooltip">Excel</div>
+                </div>
+            </div>
+            <div class="col-12 col-md-2 d-flex justify-content-center align-items-center tooltip-container "
+                style="cursor: pointer;">
+                <div class="icon-container" (click)="getPDF()">
+                    <img src="/assets/images/icons/pdf.png" width="40px">
+                    <div class="tooltip">Pdf</div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div *ngIf="OType=='boxinhand'">
+    <div class="card">
+        <div class="Head d-flex justify-content-between align-items-center mb-3" style="padding: 1rem;">
+            <h6>CONFIRMATION FOR REPORT</h6>
+            <i class="fa fa-close close-icon" style="cursor: pointer;" (click)="onNoClick()"></i>
+        </div>
+        <label class="header">BOX IN HAND REPORT
         </label>
         <div class="mb-3 display justify-content-center align-items-center " style="padding: 1rem;">
             <div class="input_box col-12 col-md-8">
