--- a/src/app/admin/features/channel_setting/Reports/trai-report/trai-report.component.html
+++ b/src/app/admin/features/channel_setting/Reports/trai-report/trai-report.component.html
@@ -6,27 +6,37 @@
                 <mat-panel-title class="text2">PACKAGE BASED REPORTS</mat-panel-title>
             </mat-expansion-panel-header>
             <div class="cardContainer">
-                <div class="card" (click)="openPackageBaseDialogue('package')"><i class="fas fa-layer-group"></i>
+                <div class="card tooltip-container" (click)="openPackageBaseDialogue('package')"><i
+                        class="fas fa-layer-group"></i>
                     <div><strong>Logs of Creation and modification of packages for any particular period</strong>
                     </div>
+                    <div class="tooltip">PACKAGE MODIFICATION </div>
+
                 </div>
-                <div class="card" (click)="openPackageBaseDialogue('addon_package')"><i class="fas fa-cube" ></i>
+                <div class="card tooltip-container" (click)="openPackageBaseDialogue('addon_package')"><i
+                        class="fas fa-cube"></i>
                     <div><strong>Logs of Creation and modification of addonpackages for any particular
                             period</strong>
                     </div>
+                    <div class="tooltip">ADDON PACKAGE MODIFICATION </div>
+
                 </div>
-                <div class="card" (click)="openPackageBaseDialogue('channel_history')"><i class="fas fa-calendar-alt"></i>
-                    <div><strong>Logs of Creation and modification of Channels for any particular period</strong>
-                    </div>
+                <div class="card tooltip-container" (click)="openPackageBaseDialogue('channel_history')"><i
+                        class="fas fa-calendar-alt"></i>
+                    <div><strong>Logs of Creation and modification of Channels for any particular period</strong> </div>
+                    <div class="tooltip">CHANNEL UPDATE HISTORY LOG </div>
+
                 </div>
-                <div class="card" (click)="openPackageBaseDialogue('combo')"><i class="fas fa-file-invoice"></i>
+                <!-- <div class="card tooltip-container" (click)="openPackageBaseDialogue('combo')"><i
+                        class="fas fa-file-invoice"></i>
                     <div><strong>Combo Package Report</strong> </div>
-                </div>
+                    <div class="tooltip">COMBO PACKAGE </div>
+                </div> -->
             </div>
         </mat-expansion-panel>
     </mat-accordion>
 </section>
-<!-- ----------------------------------Subscription based reports--------------------------------- -->
+<!-- ------------------------------Subscription based reports--------------------------------- -->
 <section>
     <mat-accordion class="example-headers-align">
         <mat-expansion-panel [expanded]="step() === 0" (opened)="setStep(0)" hideToggle>
@@ -34,32 +44,46 @@
                 <mat-panel-title class="text2">Subscription based reports</mat-panel-title>
             </mat-expansion-panel-header>
             <div class="cardContainer">
-                <div class="card"  (click)="openPackageBaseDialogue('bouquetAlacarte')"><i class="fas fa-rocket"></i>
+                <div class="card tooltip-container" (click)="openPackageBaseDialogue('bouquetAlacarte')"><i
+                        class="fas fa-rocket"></i>
                     <div><strong>Historical Package/Addon/Alacarte report (Product Type Wise)</strong> </div>
+                    <div class="tooltip">BOUQUET ALACARTE PACKAGE REPORT</div>
                 </div>
-                <div class="card" ><i class="fas fa-ban"></i>
+                <div class="card tooltip-container" (click)="openSubscriptionDialogue('weekly_based')"><i
+                        class="fas fa-ban"></i>
                     <div><strong>Weekly Active/Deactive Subscription Report</strong> </div>
+                    <div class="tooltip">WEEKLY ACTIVE/DEACTIVE</div>
                 </div>
-                <div class="card" (click)="openSubscriptionDialogue('base_package')"> <i class="fas fa-cloud-upload-alt"></i>
+                <div class="card tooltip-container" (click)="openSubscriptionDialogue('base_package')"> <i
+                        class="fas fa-cloud-upload-alt"></i>
                     <div><strong>As on Date Active/Deactive Subscription Report (Base Package)</strong> </div>
+                    <div class="tooltip">BASE PACKAGE </div>
                 </div>
-                <div class="card" (click)="openSubscriptionDialogue('addon_package')"><i class="fas fa-th-list"></i>
+                <!-- <div class="card tooltip-container" (click)="openSubscriptionDialogue('addon_package')"><i
+                        class="fas fa-th-list"></i>
                     <div><strong>As on Date Active/Deactive Subscription Report (Addon Package)</strong> </div>
+                    <div class="tooltip">ADDON PACKAGE</div>
                 </div>
-                <div class="card" (click)="openSubscriptionDialogue('alacarte')"><i class="fas fa-file-alt"></i>
+                <div class="card tooltip-container" (click)="openSubscriptionDialogue('alacarte')"><i
+                        class="fas fa-file-alt"></i>
                     <div><strong>As on Date Active/Deactive Subscription Report (Alacarte)</strong> </div>
+                    <div class="tooltip"> A-LA-CARTE ACTIVE/DEACTIVE </div>
                 </div>
-                <div class="card" (click)="openSubscriptionDialogue('date_subscription')"><i class="fas fa-file-alt"></i>
+                <div class="card tooltip-container" (click)="openSubscriptionDialogue('date_subscription')"><i
+                        class="fas fa-file-alt"></i>
                     <div><strong>As on Date Active/Deactive Subscription Report (All Type of Products)</strong> </div>
+                    <div class="tooltip">AS ON DATE ACTIVE/DEACTIVE (ALL TYPES OF PRODUCTS) </div>
                 </div>
-                <div class="card"><i class="fas fa-file-alt"></i>
+                <div class="card tooltip-container" (click)="openPackageBaseDialogue('Synchronization')"><i
+                        class="fas fa-file-alt"></i>
                     <div><strong>Synchronization Report</strong> </div>
-                </div>
+                    <div class="tooltip">SYNCHRONIZATION</div>
+                </div> -->
             </div>
         </mat-expansion-panel>
     </mat-accordion>
 </section>
-<!-- ------------------------------------------Broadcaster Reports----------------------------------- -->
+<!-- -------------------------------Broadcaster Reports-----------------------------------
 <section>
     <mat-accordion class="example-headers-align">
         <mat-expansion-panel [expanded]="step() === 0" (opened)="setStep(0)" hideToggle>
@@ -67,7 +91,7 @@
                 <mat-panel-title class="text2">Broadcaster Reports</mat-panel-title>
             </mat-expansion-panel-header>
             <div class="cardContainer">
-                <div class="card"><i class="fas fa-check-circle"></i>
+                <div class="card" (click)="openBroadcasterDialogue('monthly_broad')"><i class="fas fa-check-circle"></i>
                     <div><strong>Monthly Broadcaster Reception</strong> </div>
                 </div>
                 <div class="card"><i class="fas fa-tv"></i>
@@ -87,7 +111,7 @@
         </mat-expansion-panel>
     </mat-accordion>
 </section>
-<!-- ---------------------------------------History Reports-------------------------------------------------------- -->
+--------------------------------History Reports--------------------------------------------------------
 <section>
     <mat-accordion class="example-headers-align">
         <mat-expansion-panel [expanded]="step() === 0" (opened)="setStep(0)" hideToggle>
@@ -111,7 +135,7 @@
         </mat-expansion-panel>
     </mat-accordion>
 </section>
-<!-- ----------------------------------Suspend reports----------------------------------------------------------- -->
+--------------------------------Suspend reports-----------------------------------------------------------
 <section>
     <mat-accordion class="example-headers-align">
         <mat-expansion-panel [expanded]="step() === 0" (opened)="setStep(0)" hideToggle>
@@ -132,7 +156,7 @@
         </mat-expansion-panel>
     </mat-accordion>
 </section>
-<!-- -----------------------------CAS operation reports (Historical Reports)----------------------------------------------------- -->
+-------------------------------CAS operation reports (Historical Reports)-----------------------------------------------------
 <section>
     <mat-accordion class="example-headers-align">
         <mat-expansion-panel [expanded]="step() === 0" (opened)="setStep(0)" hideToggle>
@@ -157,37 +181,8 @@
         </mat-expansion-panel>
     </mat-accordion>
 </section>
-<!-- -------------------------------------Channel Based reports-------------------------------------------------------- -->
-<section>
-    <mat-accordion class="example-headers-align">
-        <mat-expansion-panel [expanded]="step() === 0" (opened)="setStep(0)" hideToggle>
-            <mat-expansion-panel-header>
-                <mat-panel-title class="text2">Channel Based reports</mat-panel-title>
-            </mat-expansion-panel-header>
-            <!-- <div class="cardContainer">
-                <div class="card"><i class="fas fa-check-circle"></i>
-                    <div><strong>First Time Activation History</strong> </div>
-                </div>
-                <div class="card"><i class="fas fa-tv"></i>
-                    <div><strong>Channel Update History</strong> </div>
-                </div>
-                <div class="card"><i class="fas fa-file-upload"></i>
-                    <div><strong>Invertory Upload Report</strong> </div>
-                </div>
-                <div class="card"><i class="fas fa-store"></i>
-                    <div><strong>Smartcard Update History</strong> </div>
-                </div>
-                <div class="card"><i class="fas fa-boxes"></i>
-                    <div><strong>Force Tuning History</strong> </div>
-                </div>
-                <div class="card"><i class="fas fa-exclamation-circle"></i>
-                    <div><strong>Not Allocated Smartcard</strong> </div>
-                </div>
-            </div> -->
-        </mat-expansion-panel>
-    </mat-accordion>
-</section>
-<!-- --------------------------------------count reports---------------------------------------------------------- -->
+
+--------------------------------count reports----------------------------------------------------------
 <section>
     <mat-accordion class="example-headers-align">
         <mat-expansion-panel [expanded]="step() === 0" (opened)="setStep(0)" hideToggle>
@@ -204,34 +199,4 @@
             </div>
         </mat-expansion-panel>
     </mat-accordion>
-</section>
-<!-- ---------------------------------Smartcard Based Reports------------------------------------------------------------ -->
-<section>
-    <mat-accordion class="example-headers-align">
-        <mat-expansion-panel [expanded]="step() === 0" (opened)="setStep(0)" hideToggle>
-            <mat-expansion-panel-header>
-                <mat-panel-title class="text2">Smartcard Based Reports</mat-panel-title>
-            </mat-expansion-panel-header>
-            <!-- <div class="cardContainer">
-                <div class="card"><i class="fas fa-check-circle"></i>
-                    <div><strong>First Time Activation History</strong> </div>
-                </div>
-                <div class="card"><i class="fas fa-tv"></i>
-                    <div><strong>Channel Update History</strong> </div>
-                </div>
-                <div class="card"><i class="fas fa-file-upload"></i>
-                    <div><strong>Invertory Upload Report</strong> </div>
-                </div>
-                <div class="card"><i class="fas fa-store"></i>
-                    <div><strong>Smartcard Update History</strong> </div>
-                </div>
-                <div class="card"><i class="fas fa-boxes"></i>
-                    <div><strong>Force Tuning History</strong> </div>
-                </div>
-                <div class="card"><i class="fas fa-exclamation-circle"></i>
-                    <div><strong>Not Allocated Smartcard</strong> </div>
-                </div>
-            </div> -->
-        </mat-expansion-panel>
-    </mat-accordion>
-</section>
+</section> -->
