--- a/src/app/admin/features/channel_setting/_Dialogue/local+broadcasting/createltb/createltb.component.html
+++ b/src/app/admin/features/channel_setting/_Dialogue/local+broadcasting/createltb/createltb.component.html
@@ -1,5 +1,4 @@
 <div>
-
     <div class="Head d-flex justify-content-between align-items-center mb-3" style="padding: 1rem;">
         <h6>Create New LTB</h6>
         <i class="fa fa-close close-icon" style="cursor: pointer;" (click)="onNoClick()"></i>
@@ -59,7 +58,8 @@
                     <span for="">LCN No</span>
                 </div>
                 <div class="col-12 col-md-6 ">
-                    <input type="text" placeholder="Enter  No" [(ngModel)]="lcnNo" maxlength="4" (keypress)="onKeydown($event)">
+                    <input type="text" placeholder="Enter  No" [(ngModel)]="lcnNo" maxlength="4"
+                        (keypress)="onKeydown($event)">
                 </div>
             </div>
 
@@ -68,7 +68,8 @@
                     <span for="">Channel Rate </span>
                 </div>
                 <div class="col-12 col-md-6 ">
-                    <input type="text" placeholder="Enter Channel Rate" [(ngModel)]="chRate" (ngModelChange)="onChange()" maxlength="4" (keypress)="onKeydown($event)"/>
+                    <input type="text" placeholder="Enter Channel Rate" [(ngModel)]="chRate"
+                        (ngModelChange)="onChange()" maxlength="4" (keypress)="onKeydown($event)" />
                     <!-- <input type="text" placeholder="Enter Channel Rate" [(ngModel)]="chRate"> -->
                 </div>
             </div>
